--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "static-site",
+  "name": "give-me-readme",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "garretthilberling",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.5.2"
+    "inquirer": "^8.2.0"
   },
-  "description": ""
+  "description": "README generator"
 }
